Writable API changes - Cascade and Eager Load Associations
SVN-Revision: 1846

--- a/SDK4/junit/build.xml
+++ b/SDK4/junit/build.xml
@@ -168,6 +168,7 @@
 			<exclude name="**/*WS*.java"/>
 			<exclude name="**/*XSD*.java"/>	
 			<exclude name="**/*XMLMapping*.java"/>
+			<exclude name="**/*HBMMapping*.java"/>
 			<exclude name="**/*XMLData*.java"/>
 			<exclude name="**/*Security*.java"/>
 			<include name="**/*.java" />
