Validator for the PrimaryKeyGenerator
SVN-Revision: 1852

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -146,3 +146,7 @@ INCLUDE_SEARCH_EVENT_LISTENER=false
 #  User can choose to specify any absolute path for the cache files
 ##################################################################################
 CACHE_PATH=java.io.tmpdir
+
+
+DATABASE_TYPE=oracle
+IDENTITY_GENERATOR_TAG=<generator class="assigned"/>
