entered property for writable api
SVN-Revision: 1869

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -37,6 +37,15 @@ ATTRIBUTE_LEVEL_SECURITY=false
 
 WEBSERVICE_NAME=${PROJECT_NAME}Service
 
+##################################################################################
+#  WRITABLE API PROPERTIES
+# 
+#  ENABLE_WRITABLE_API_EXTENSION if set to "yes" then it will change the
+#  service interface and corresponding implementation for writable API
+##################################################################################
+ENABLE_WRITABLE_API_EXTENSION=no
+
+
 ################################################################################## 
 #  APPLICATION SERVER PROPERTIES
 #
