changes for the writable api
SVN-Revision: 1873

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -1,5 +1,6 @@
 codegen.dir=codegen
 system.dir=system
+writable-api.dir=writable-api
 
 file.prefix=caCORE_SDK_401
 release.dir=release
@@ -59,3 +60,12 @@ application.config.security.file=application-config-security.xml
 
 xml.comment.start=<!--
 xml.comment.end=-->
+
+
+extension.api.interface=gov.nih.nci.system.applicationservice.WritableApplicationService
+extension.api.impl=gov.nih.nci.system.applicationservice.impl.WritableApplicationServiceImpl
+extension.dao.factory=gov.nih.nci.system.dao.orm.WritableORMDAOFactoryBean
+
+sdk.api.interface=gov.nih.nci.system.applicationservice.ApplicationService
+sdk.api.impl=gov.nih.nci.system.applicationservice.impl.ApplicationServiceImpl
+sdk.dao.factory=gov.nih.nci.system.dao.orm.ORMDAOFactoryBean
