--- a/SDK4/system/build.xml
+++ b/SDK4/system/build.xml
@@ -106,6 +106,7 @@
 				<include name="gov/nih/nci/system/applicationservice/impl/**/*"/>
 				<include name="gov/nih/nci/system/util/**/*"/>
 				<exclude name="gov/nih/nci/system/dao/*Exception*.*"/>
+				<include name="gov/nih/nci/system/security/**/*"/>
 			</fileset>
 		</jar>
 
