--- a/SDK4/system/build.xml
+++ b/SDK4/system/build.xml
@@ -7,6 +7,7 @@
 	*** Load the build properties from the file
 	*********************************************************************** -->
 	<property file="build.properties"  />
+	<property file="${security.dir}\build.properties"  prefix="security"/>
 	
 	<!--***********************************************************************
 	*** Import utility script
@@ -20,6 +21,7 @@
 		<fileset dir="${lib.dir}">
 			<include name="*.jar" />
 		</fileset>
+		<path location="${security.dir}\${security.build.classes.dir}"/>
 	</path>
 
 	<!-- set basedir.url = basedir as unix style pathname, regardless of platform -->
@@ -59,10 +61,19 @@
 	</target>
 
 	<!--***********************************************************************
+	*** Cleans the generated directories and files
+	*********************************************************************** -->
+	<target name="clean-all" description="Cleans the generated directories and files"  depends="clean">
+		<SDKecho message="${ant.project.name}: Cleaning child projects"/>
+		<ant antfile="${security.dir}/build.xml" target="clean" inheritall="no" inheritrefs="false"/>
+	</target>
+	
+	<!--***********************************************************************
 	*** Compiles source code
 	*********************************************************************** -->
 	<target name="compile" depends="init" description="Compiles source code">
 		<SDKecho message="${ant.project.name}: Compiling source code"/>
+		<ant antfile="${security.dir}/build.xml" target="compile" inheritall="no" inheritrefs="false"/>
 		<javac srcdir="${src.dir}" destdir="${build.classes.dir}" debug="true">
 			<classpath refid="classpath"/>
 		</javac>
@@ -76,6 +87,10 @@
 	*********************************************************************** -->
 	<target name="dist" depends="compile" description="Prepates distribution files">
 		<SDKecho message="${ant.project.name}: Creating distributable package"/>
+		<ant antfile="${security.dir}/build.xml" target="dist" inheritall="no" inheritrefs="false"/>
+		<copy todir="${dist.dir}">
+			<fileset dir="${security.dir}\${security.dist.dir}" includes="*.jar"/>
+		</copy>
 		<jar destfile="${dist.dir}\${file.output.client.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
@@ -100,13 +115,11 @@
 			<include name="gov/nih/nci/system/applicationservice/impl/**/*"/>
 			<include name="gov/nih/nci/system/util/**/*"/>
 			<exclude name="gov/nih/nci/system/dao/*Exception*.*"/>
-			<include name="gov/nih/nci/system/security/**/*"/>
 			<fileset dir="${src.dir}">
 				<include name="gov/nih/nci/system/dao/**/*"/>
 				<include name="gov/nih/nci/system/applicationservice/impl/**/*"/>
 				<include name="gov/nih/nci/system/util/**/*"/>
 				<exclude name="gov/nih/nci/system/dao/*Exception*.*"/>
-				<include name="gov/nih/nci/system/security/**/*"/>
 			</fileset>
 		</jar>
 
