--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -1,6 +1,7 @@
 codegen.dir=codegen
 system.dir=system
 writable-api.dir=writable-api
+security.dir=${system.dir}/security
 
 file.prefix=caCORE_SDK_401
 release.dir=release
@@ -64,8 +65,8 @@ xml.comment.end=-->
 
 extension.api.interface=gov.nih.nci.system.applicationservice.WritableApplicationService
 extension.api.impl=gov.nih.nci.system.applicationservice.impl.WritableApplicationServiceImpl
-extension.dao.factory=gov.nih.nci.system.dao.orm.WritableORMDAOFactoryBean
+extension.dao.impl=gov.nih.nci.system.dao.orm.WritableORMDAOImpl
 
 sdk.api.interface=gov.nih.nci.system.applicationservice.ApplicationService
 sdk.api.impl=gov.nih.nci.system.applicationservice.impl.ApplicationServiceImpl
-sdk.dao.factory=gov.nih.nci.system.dao.orm.ORMDAOFactoryBean
+sdk.dao.impl=gov.nih.nci.system.dao.orm.ORMDAOImpl
