--- a/SDK4/.classpath
+++ b/SDK4/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="codegen/core/src"/>
 	<classpathentry kind="src" path="system/src"/>
 	<classpathentry kind="src" path="writable-api/src"/>
+	<classpathentry kind="src" path="system/security/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="codegen/core/lib/commons-logging-1.1.jar"/>
 	<classpathentry kind="lib" path="codegen/core/lib/dom4j-1.4.jar"/>
@@ -16,7 +17,6 @@
 	<classpathentry kind="lib" path="codegen/core/lib/mmbase.jar"/>
 	<classpathentry kind="lib" path="system/lib/antlr-2.7.6.jar"/>
 	<classpathentry kind="lib" path="system/lib/asm.jar"/>
-	<classpathentry kind="lib" path="system/lib/c3p0-0.9.0.jar"/>
 	<classpathentry kind="lib" path="system/lib/cglib-2.1.3.jar"/>
 	<classpathentry kind="lib" path="system/lib/commons-collections-3.2.jar"/>
 	<classpathentry kind="lib" path="system/lib/commons-logging-1.1.jar"/>
@@ -29,7 +29,7 @@
 	<classpathentry kind="lib" path="system/lib/spring.jar"/>
 	<classpathentry kind="lib" path="system/lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="system/lib/axis.jar"/>
-	<classpathentry kind="lib" path="system/lib/csmapi.jar" sourcepath="/csmapi/src"/>
+	<classpathentry kind="lib" path="system/lib/csmapi.jar" sourcepath="/csm-api/src"/>
 	<classpathentry kind="lib" path="system/lib/freemarker-2.3.4.jar"/>
 	<classpathentry kind="lib" path="system/lib/jdom.jar"/>
 	<classpathentry kind="lib" path="system/lib/ognl-2.6.7.jar"/>
@@ -45,11 +45,13 @@
 	<classpathentry kind="lib" path="system/lib/mysql-connector-java-3.1.13-bin.jar"/>
 	<classpathentry kind="lib" path="system/lib/oro-2.0.8.jar"/>
 	<classpathentry kind="lib" path="system/lib/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="system/lib/acegi-security-1.0.4.jar" sourcepath="/ACEGI/src"/>
+	<classpathentry kind="lib" path="system/lib/acegi-security-1.0.4.jar"/>
 	<classpathentry kind="lib" path="system/lib/clm.jar"/>
 	<classpathentry kind="lib" path="junit/lib/easymock.jar"/>
 	<classpathentry kind="lib" path="junit/lib/easymockclassextension.jar"/>
 	<classpathentry kind="lib" path="junit/lib/jmockit.jar"/>
 	<classpathentry kind="lib" path="junit/lib/junit-4.4.jar"/>
+	<classpathentry kind="lib" path="system/lib/commons-dbcp-1.2.2.jar"/>
+	<classpathentry kind="lib" path="system/lib/commons-pool-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
