modified value for IDENTITY_GENERATOR_TAG
SVN-Revision: 1945

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -158,4 +158,4 @@ CACHE_PATH=java.io.tmpdir
 
 
 DATABASE_TYPE=oracle
-IDENTITY_GENERATOR_TAG=<generator class="assigned"/>
+IDENTITY_GENERATOR_TAG=<generator class="hilo"/>
