--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -70,3 +70,6 @@ extension.dao.impl=gov.nih.nci.system.dao.orm.WritableORMDAOImpl
 sdk.api.interface=gov.nih.nci.system.applicationservice.ApplicationService
 sdk.api.impl=gov.nih.nci.system.applicationservice.impl.ApplicationServiceImpl
 sdk.dao.impl=gov.nih.nci.system.dao.orm.ORMDAOImpl
+
+
+HBM2DDL_TYPE=validate
